--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Kulob Team Records — музыкальный лейбл с уникальной атмосферой и поддержкой талантливых артистов. Основан в 2015 году.">
     <title>Kulob Team Records</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="Kulobteamrecords.github.io
+/Style.css
+">
 </head>
 <body>
     <header>
