--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Kulob Team Records — a music label with a unique atmosphere and support for talented artists. Founded in 2015.">
     <title>Kulob Team Records</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Kulobteamrecords.github.io
+/Style.css
+">
 </head>
 <body>
     <header>
