--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="container">
             <div class="header1">
-                <img src="images/logo.png" alt="Логотип Kulob Team Records" class="logo">
+                <img src="logo.png" alt="Логотип Kulob Team Records" class="logo">
                 <nav class="header1">
                     <ul>
                         <li><a href="#about">О нас</a></li>
