--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <div class="header1">
-                <img src="images/logo.png" alt="Kulob Team Records Logo" class="logo">
+                <img src="logo.png" alt="Kulob Team Records Logo" class="logo">
                 <nav class="header1">
                     <ul>
                         <li><a href="#about">About Us</a></li>
